# EtherTarot

./: .gitignore  README.md  package-lock.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py  settings.py
backend/app/api/v1/: __init__.py  cards.py  draw.py  interpret.py
backend/app/data/: loader.py  major_arcana.json  spreads.json
backend/app/data/minor_arcana/: cups.json  cups_court.json  pentacles.json  pentacles_court.json  swords.json  swords_court.json  wands.json
backend/app/engine/: oracle.py
backend/app/engine/prompts/: __init__.py
backend/app/models/: draw.py  interpretation.py  tarot.py
backend/app/services/: draw_service.py
backend/tests/: conftest.py  test_cards.py  test_draw.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: endpoints.ts
frontend/src/components/Effects/: EffectsLayer.tsx  ShuffleCanvas.tsx
frontend/src/components/Interpretation/: InterpretationPanel.module.css  InterpretationPanel.tsx
frontend/src/components/TarotCard/: CardBack.tsx  CardFace.module.css  CardFace.tsx
frontend/src/hooks/: useAudio.ts  useMouseTrail.ts  useShuffleTracking.ts  useStarfield.ts
frontend/src/pages/: HomePage.module.css  HomePage.tsx  ReadingPage.module.css  ReadingPage.tsx
frontend/src/styles/: globals.css
frontend/src/types/: tarot.ts
scripts/: generate_audio.py
